--- a/luyeTable.less
+++ b/luyeTable.less
@@ -115,9 +115,11 @@ table {
   margin-bottom: 4px;
   button {
     color: #fff;
+    height: 30px;
     background-color: #286090;
     border-color: #204d74;
     border-radius: 4px;
+    margin: 0 4px;
   }
   button:nth-child(2) {
     margin-left: 10px;
@@ -127,7 +129,7 @@ table {
   }
   input {
     .txt-align;
-    height: 30px;
+    height: 24px;
     border: 2px solid #507580;
     border-radius: 4px;
   }
